July 9, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr-solaris.c: Added (not implemented for now).
 * plugins/dfcdrom/Makefile.am: Added cdr-solaris.c.
 * plugins/dfcdrom/cdr-freebsd.c: Return 0 for PlayCDDA()/StopCDDA().
 * gui/ConfDlg.c: Don't use dlerror() to check for symbol load failure.

July 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr.c: Refactored for better portability.
 * plugins/dfcdrom/cdr.h: Likewise.
 * plugins/dfcdrom/cfg.c: Likewise.
 * plugins/dfcdrom/cdr-linux.c: Likewise.
 * plugins/dfcdrom/cdr-null.c: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/main.c: Likewise.
 * plugins/dfcdrom/cdr-freebsd.c: Added prelimiary FreeBSD port (not working
   yet).
 * plugins/dfcdrom/Makefile.am: Added cdr-linux.c, cdr-null.c, cdr-freebsd.c.
 * configure.ac: Added bladesio1.
 * Makefile.am: Likewise.

July 7, 2010 edgbla <edgbla@yandex.ru>

 * plugins/bladesio1/gui.c: Sio1 plugin (dummy).
 * plugins/bladesio1/Makefile.am: Likewise.
 * plugins/bladesio1/settings.c: Likewise.
 * plugins/bladesio1/settings.h: Likewise.
 * plugins/bladesio1/sio1.c: Likewise.
 * plugins/bladesio1/sio1.h: Likewise.
 * plugins/bladesio1/sio1.glade2: Likewise.

July 7, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/plugins.c: #ifdef'ed out the currently unused Sio1 API.
 * libpcsxcore/plugins.h: Likewise.
 * libpcsxcore/psxhw.c: Likewise.
 * win32/gui/AboutDlg.c: Minor text change.
 * po/pcsx.pot, po/*.po: Updated.
 * libpcsxcore/socket.c: Fixed FTBFS on FreeBSD.
 * configure.ac: Likewise.
 * gui/Makefile.am: Likewise.
 * plugins/dfcdrom/cdr-null.c: Likewise.
 * libpcsxcore/plugins.c: Fixed plugin loading with FreeBSD.

July 4, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/plugins.c: GPUvBlank (for gpuBladeSoft now, experimental).
 * libpcsxcore/plugins.h: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.

July 3, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/psxhw.c: Sio1 interface (link cable).